@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>652</width>
-    <height>620</height>
+    <height>598</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -232,43 +232,43 @@ and when switching from Book View to Code View.</string>
    <item>
     <widget class="QGroupBox" name="groupBoxClipLimit">
      <property name="title">
-      <string>Clipboard History</string>
+      <string>Number of clipboard history items to save between sessions (0 disables):</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_4">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
-       <widget class="QLabel" name="labelCLipLimit">
-        <property name="text">
-         <string>Number of Entries to Maintain (-1 Sigil decides / 0 to disable)</string>
+       <widget class="QSpinBox" name="clipLimitSpin">
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>16777215</height>
+         </size>
         </property>
-        <property name="wordWrap">
-         <bool>true</bool>
+        <property name="toolTip">
+         <string>Use to limit (or disable) clipboard history saving between sessions</string>
+        </property>
+        <property name="minimum">
+         <number>0</number>
+        </property>
+        <property name="maximum">
+         <number>20</number>
+        </property>
+        <property name="value">
+         <number>20</number>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QSlider" name="clipLimitSlider">
-        <property name="minimum">
-         <number>-1</number>
-        </property>
-        <property name="maximum">
-         <number>19</number>
-        </property>
-        <property name="value">
-         <number>-1</number>
-        </property>
-        <property name="sliderPosition">
-         <number>-1</number>
-        </property>
+       <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
-        <property name="tickPosition">
-         <enum>QSlider::TicksBothSides</enum>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
         </property>
-        <property name="tickInterval">
-         <number>1</number>
-        </property>
-       </widget>
+       </spacer>
       </item>
      </layout>
     </widget>
