@@ -117,6 +117,8 @@ extern const QString HTML_COVER_FILENAME;
 extern const QString HTML_COVER_SOURCE;
 extern const QString HTML5_COVER_SOURCE;
 
+extern const int CLIPBOARD_HISTORY_MAX;
+
 extern const QString SIGIL_PREFS_DIR;
 extern const QString PATH_LIST_DELIM;
 extern const QString PYTHON_MAIN_PATH;
