@@ -6,12 +6,15 @@ preSigil-0.9.9
     - fix missing epub3 Manifest cover-image property setting/unsetting with BookBrowser
     - fix issue where cancelling the SaveAs dialog disconnected an existing epub from its saved path
     - fix assertion error in sigil-gumbo when handling extraneous script end tags
+    - fix segfault in Split at Cursor when not an html file
+    - make sure Add Cover tool properly handles existing manifest cover properties in EPUB3s
 
    New Features
     - add SIGIL_DISABLE_CURSOR_BLINK environment variable to disable text cursor to aid Accessibility on OSX
     - better use semantic information (guide types and Landmarks) to allow the user finer control of index generation
     - attempt to improve Metadata Editor placeholder text to help beginners
     - Preview Window Title bar will now show height and width of the Preview Window
+    - allow users to limit/disable clipboard history saving via General Preferences
 
  
 Sigil-0.9.8
